# Exodus2025_drive

./: run_sequence.sh  start_robot.sh
src/cubemars_hardware/: CMakeLists.txt  README.md  cubemars_hardware.xml
src/cubemars_hardware/include/cubemars_hardware/: fake_system.hpp
src/cubemars_hardware/src/: fake_system.cpp  system.cpp
src/drive_controller/: CMakeLists.txt  README.md  package.xml
src/drive_controller/config/: ackermann.yaml  controllers.yaml
src/drive_controller/launch/: ackermann.launch.py  ackermann.launch.py.save  drive.launch.py  keyboard_teleop.launch.py  xbox_teleop.launch.py
src/drive_controller/scripts/: ackermann_drive_node.py  keyboard_teleop_node.py  xbox_teleop_node.py
src/drive_controller/urdf/: cubemars_test.ros2_control.urdf.xacro
src/temptest/: CMakeLists.txt  cubemars_test.launch.py  drive.launch.py  package.xml
temp/: error.txt
